--- a/project/src/main/resources/templates/checkout.html
+++ b/project/src/main/resources/templates/checkout.html
@@ -9,7 +9,7 @@
     <title>Checkout example · Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
 
     <style>
       .bd-placeholder-img {
@@ -28,7 +28,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="../static/css/checkout.css" rel="stylesheet">
+    <link href="/css/checkout.css" rel="stylesheet">
   </head>
   <body class="bg-light">
     <div class="container">
@@ -246,7 +246,7 @@
     </ul>
   </footer>
 </div>
-<script src="../static/js/jquery-3.3.1.slim.min.js" ></script>
-      <script>window.jQuery || document.write('<script src="../static/js/jquery-slim.min.js"><\/script>')</script><script src="../static/js/bootstrap.bundle.js"></script>
-        <script src="../static/js/checkout.js"></script></body>
+<script src="/js/jquery-3.3.1.slim.min.js" ></script>
+      <script>window.jQuery || document.write('<script src="/js/jquery-slim.min.js"><\/script>')</script><script src="/js/bootstrap.bundle.js"></script>
+        <script src="/js/checkout.js"></script></body>
 </html>
