--- a/project/src/main/resources/templates/design.html
+++ b/project/src/main/resources/templates/design.html
@@ -3,11 +3,11 @@
     <head>
         <meta charset="utf-8">
         <title>Dashboard Template · Bootstrap</title>
-        <script src="../static/js/jquery-min.js"></script>
+        <script src="/js/jquery-min.js"></script>
 
-        <link href="../static/css/bootstrap.css" rel="stylesheet">
-        <link href="../static/css/main.css" rel="stylesheet">
-        <link rel="stylesheet" href="../static/css/line-icons.css">
+        <link href="/css/bootstrap.css" rel="stylesheet">
+        <link href="/css/main.css" rel="stylesheet">
+        <link rel="stylesheet" href="/css/line-icons.css">
     </head>
     <body>
       <header>
@@ -75,6 +75,6 @@
             $(".dropdown-toggle").dropdown();
           });
           </script>
-          <script src="../static/js/bootstrap.js"></script>
+          <script src="/js/bootstrap.js"></script>
     </body>
 </html>
