--- a/project/src/main/resources/templates/index.html
+++ b/project/src/main/resources/templates/index.html
@@ -10,18 +10,18 @@
     <title>Essence - Bootstrap 4 Template</title>
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="../static/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../static/css/line-icons.css">
-    <link rel="stylesheet" href="../static/css/owl.carousel.css">
-    <link rel="stylesheet" href="../static/css/owl.theme.css">
-    <link rel="stylesheet" href="../static/css/nivo-lightbox.css">
-    <link rel="stylesheet" href="../static/css/magnific-popup.css">
-    <link rel="stylesheet" href="../static/css/animate.css">
-    <link rel="stylesheet" href="../static/css/color-switcher.css">
-    <link rel="stylesheet" href="../static/css/menu_sideslide.css">
-    <link rel="stylesheet" href="../static/css/main.css">    
-    <link rel="stylesheet" href="../static/css/responsive.css">
-    <link rel="stylesheet" href="../static/css/font-awesome.css">
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/css/line-icons.css">
+    <link rel="stylesheet" href="/css/owl.carousel.css">
+    <link rel="stylesheet" href="/css/owl.theme.css">
+    <link rel="stylesheet" href="/css/nivo-lightbox.css">
+    <link rel="stylesheet" href="/css/magnific-popup.css">
+    <link rel="stylesheet" href="/css/animate.css">
+    <link rel="stylesheet" href="/css/color-switcher.css">
+    <link rel="stylesheet" href="/css/menu_sideslide.css">
+    <link rel="stylesheet" href="/css/main.css">    
+    <link rel="stylesheet" href="/css/responsive.css">
+    <link rel="stylesheet" href="/css/font-awesome.css">
 
   </head>
   
@@ -78,7 +78,7 @@
           </ol>
           <div class="carousel-inner" role="listbox">
             <div class="carousel-item active">
-              <img src="img/slider/bg-1.jpg" alt="">
+              <img src="/img/slider/bg-1.jpg" alt="">
               <div class="carousel-caption text-left">
                 <h3 class="wow fadeInRight" data-wow-delay="0.2s">Handcrafted</h1>  
                 <h2 class="wow fadeInRight" data-wow-delay="0.4s">Bootstrap 4 Template</h2>
@@ -88,7 +88,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/slider/bg-3.jpg" alt="">
+              <img src="/img/slider/bg-3.jpg" alt="">
               <div class="carousel-caption text-center">
                 <h3 class="wow fadeInDown" data-wow-delay="0.3s">Bundled With Tons of</h3>
                 <h2 class="wow bounceIn" data-wow-delay="0.6s">Cutting-edge Features</h2> 
@@ -97,7 +97,7 @@
               </div>
             </div>
             <div class="carousel-item">
-              <img src="img/slider/bg-2.jpg" alt="">
+              <img src="/img/slider/bg-2.jpg" alt="">
               <div class="carousel-caption text-center">
                 <h3 class="wow fadeInDown" data-wow-delay="0.3s">Ready For</h3>
                 <h2 class="wow fadeInRight" data-wow-delay="0.6s">Multi-purpose Websites</h2> 
@@ -354,12 +354,12 @@
           <div class="col-lg-4 col-md-6 col-xs-12 mix development print">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img-1.jpg" alt="" />  
+                <img src="/img/portfolio/img-1.jpg" alt="" />  
                 <div class="single-content">
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="img/portfolio/img-1.jpg"><i class="lni-zoom-in item-icon"></i></a>
+                        <a class="lightbox" href="/img/portfolio/img-1.jpg"><i class="lni-zoom-in item-icon"></i></a>
                       </div>
                       <a href="#">View Project</a>
                     </div>
@@ -371,12 +371,12 @@
           <div class="col-lg-4 col-md-6 col-xs-12 mix design print">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img-2.jpg" alt="" /> 
+                <img src="/img/portfolio/img-2.jpg" alt="" /> 
                 <div class="single-content">
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="img/portfolio/img-2.jpg"><i class="lni-zoom-in item-icon"></i></a>
+                        <a class="lightbox" href="/img/portfolio/img-2.jpg"><i class="lni-zoom-in item-icon"></i></a>
                       </div>
                       <a href="#">View Project</a>
                     </div>
@@ -388,12 +388,12 @@
           <div class="col-lg-4 col-md-6 col-xs-12 mix development">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img-3.jpg" alt="" />  
+                <img src="/img/portfolio/img-3.jpg" alt="" />  
                 <div class="single-content">
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="img/portfolio/img-3.jpg"><i class="lni-zoom-in item-icon"></i></a>
+                        <a class="lightbox" href="/img/portfolio/img-3.jpg"><i class="lni-zoom-in item-icon"></i></a>
                       </div>
                       <a href="#">View Project</a>
                     </div>
@@ -405,12 +405,12 @@
           <div class="col-lg-4 col-md-6 col-xs-12 mix development design">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img-4.jpg" alt="" /> 
+                <img src="/img/portfolio/img-4.jpg" alt="" /> 
                 <div class="single-content">
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="img/portfolio/img-4.jpg"><i class="lni-zoom-in item-icon"></i></a>
+                        <a class="lightbox" href="/img/portfolio/img-4.jpg"><i class="lni-zoom-in item-icon"></i></a>
                       </div>
                       <a href="#">View Project</a>
                     </div>
@@ -422,12 +422,12 @@
           <div class="col-lg-4 col-md-6 col-xs-12 mix development">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img-5.jpg" alt="" />  
+                <img src="/img/portfolio/img-5.jpg" alt="" />  
                 <div class="single-content">
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="img/portfolio/img-5.jpg"><i class="lni-zoom-in item-icon"></i></a>
+                        <a class="lightbox" href="/img/portfolio/img-5.jpg"><i class="lni-zoom-in item-icon"></i></a>
                       </div>
                       <a href="#">View Project</a>
                     </div>
@@ -439,12 +439,12 @@
           <div class="col-lg-4 col-md-6 col-xs-12 mix print design">
             <div class="portfolio-item">
               <div class="shot-item">
-                <img src="img/portfolio/img-6.jpg" alt="" />  
+                <img src="/img/portfolio/img-6.jpg" alt="" />  
                 <div class="single-content">
                   <div class="fancy-table">
                     <div class="table-cell">
                       <div class="zoom-icon">
-                        <a class="lightbox" href="img/portfolio/img-6.jpg"><i class="lni-zoom-in item-icon"></i></a>
+                        <a class="lightbox" href="/img/portfolio/img-6.jpg"><i class="lni-zoom-in item-icon"></i></a>
                       </div>
                       <a href="#">View Project</a>
                     </div>
@@ -594,7 +594,7 @@
                 <div class="testimonial-item">
                   <div class="author">
                     <div class="img-thumb">
-                    <img src="img/testimonial/img1.jpg" alt="">
+                    <img src="/img/testimonial/img1.jpg" alt="">
                     </div>
                     <div class="author-info">
                       <h2><a href="#">Johnathan Doe</a></h2>
@@ -615,7 +615,7 @@
                 <div class="testimonial-item">
                   <div class="author">
                     <div class="img-thumb">
-                    <img src="img/testimonial/img2.jpg" alt="">
+                    <img src="/img/testimonial/img2.jpg" alt="">
                     </div>
                     <div class="author-info">
                       <h2><a href="#">Oidila Matik</a></h2>
@@ -636,7 +636,7 @@
                 <div class="testimonial-item">
                   <div class="author">
                     <div class="img-thumb">
-                    <img src="img/testimonial/img3.jpg" alt="">
+                    <img src="/img/testimonial/img3.jpg" alt="">
                     </div>
                     <div class="author-info">
                       <h2><a href="#">- Alex Dattilo</a></h2>
@@ -657,7 +657,7 @@
                 <div class="testimonial-item">
                   <div class="author">
                     <div class="img-thumb">
-                    <img src="img/testimonial/img2.jpg" alt="">
+                    <img src="/img/testimonial/img2.jpg" alt="">
                     </div>
                     <div class="author-info">
                       <h2><a href="#">Oidila Matik</a></h2>
@@ -678,7 +678,7 @@
                 <div class="testimonial-item">
                   <div class="author">
                     <div class="img-thumb">
-                    <img src="img/testimonial/img1.jpg" alt="">
+                    <img src="/img/testimonial/img1.jpg" alt="">
                     </div>
                     <div class="author-info">
                       <h2><a href="#">- Alex Dattilo</a></h2>
@@ -730,7 +730,7 @@
         <div class="row">
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/team1.png" alt="">
+              <img src="/img/team/team1.png" alt="">
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Jhon Doe</h4>
@@ -747,7 +747,7 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/team2.png" alt="">
+              <img src="/img/team/team2.png" alt="">
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Luke Chesser</h4>
@@ -764,7 +764,7 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/team3.png" alt="">
+              <img src="/img/team/team3.png" alt="">
               <div class="team-details">
                 <div class="team-inner">                  
                   <h4 class="team-title">David Givens</h4>
@@ -781,7 +781,7 @@
           </div>
           <div class="col-lg-3 col-md-6 col-xs-12">
             <div class="single-team">
-              <img src="img/team/team4.png" alt="">
+              <img src="/img/team/team4.png" alt="">
               <div class="team-details">
                 <div class="team-inner">
                   <h4 class="team-title">Annie Spratt</h4>
@@ -888,7 +888,7 @@
             <div class="blog-item-wrapper">
               <div class="blog-item-img">
                 <a href="single-post.html">
-                  <img src="img/blog/img1.jpg" alt="">
+                  <img src="/img/blog/img1.jpg" alt="">
                 </a>                
               </div>
               <div class="blog-item-text"> 
@@ -909,7 +909,7 @@
             <div class="blog-item-wrapper">
               <div class="blog-item-img">
                 <a href="single-post.html">
-                  <img src="img/blog/img2.jpg" alt="">
+                  <img src="/img/blog/img2.jpg" alt="">
                 </a>                
               </div>
               <div class="blog-item-text"> 
@@ -930,7 +930,7 @@
             <div class="blog-item-wrapper">
               <div class="blog-item-img">
                 <a href="single-post.html">
-                  <img src="img/blog/img3.jpg" alt="">
+                  <img src="/img/blog/img3.jpg" alt="">
                 </a>                
               </div>
               <div class="blog-item-text"> 
@@ -957,22 +957,22 @@
         <!-- Row and Scroller Wrapper Starts -->
         <div class="row" id="clients-scroller">
           <div class="client-item-wrapper">
-            <img src="img/clients/img1.png" alt="">
+            <img src="/img/clients/img1.png" alt="">
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img2.png" alt="">
+            <img src="/img/clients/img2.png" alt="">
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img3.png" alt="">
+            <img src="/img/clients/img3.png" alt="">
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img4.png" alt="">
+            <img src="/img/clients/img4.png" alt="">
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img5.png" alt="">
+            <img src="/img/clients/img5.png" alt="">
           </div>
           <div class="client-item-wrapper">
-            <img src="img/clients/img6.png" alt="">
+            <img src="/img/clients/img6.png" alt="">
           </div>
         </div>
       </div>
@@ -1128,12 +1128,12 @@
               <div class="widget">
                 <h3 class="block-title">Instagram</h3>
                 <ul class="instagram-footer">
-                  <li><a href="#"><img src="img/instagram/insta1.jpg" alt=""></a></li>
-                  <li><a href="#"><img src="img/instagram/insta2.jpg" alt=""></a></li>
-                  <li><a href="#"><img src="img/instagram/insta3.jpg" alt=""></a></li>
-                  <li><a href="#"><img src="img/instagram/insta4.jpg" alt=""></a></li>
-                  <li><a href="#"><img src="img/instagram/insta5.jpg" alt=""></a></li>
-                  <li><a href="#"><img src="img/instagram/insta6.jpg" alt=""></a></li>
+                  <li><a href="#"><img src="/img/instagram/insta1.jpg" alt=""></a></li>
+                  <li><a href="#"><img src="/img/instagram/insta2.jpg" alt=""></a></li>
+                  <li><a href="#"><img src="/img/instagram/insta3.jpg" alt=""></a></li>
+                  <li><a href="#"><img src="/img/instagram/insta4.jpg" alt=""></a></li>
+                  <li><a href="#"><img src="/img/instagram/insta5.jpg" alt=""></a></li>
+                  <li><a href="#"><img src="/img/instagram/insta6.jpg" alt=""></a></li>
                 </ul>
               </div>
             </div>
@@ -1270,26 +1270,26 @@
       </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="../static/js/jquery-min.js"></script>
-    <script src="../static/js/popper.min.js"></script>
-    <script src="../static/js/bootstrap.min.js"></script>
-    <script src="../static/js/classie.js"></script>
-    <script src="../static/js/color-switcher.js"></script>
-    <script src="../static/js/jquery.mixitup.js"></script>
-    <script src="../static/js/nivo-lightbox.js"></script>
-    <script src="../static/js/owl.carousel.js"></script>    
-    <script src="../static/js/jquery.stellar.min.js"></script>    
-    <script src="../static/js/jquery.nav.js"></script>    
-    <script src="../static/js/scrolling-nav.js"></script>    
-    <script src="../static/js/jquery.easing.min.js"></script>     
-    <script src="../static/js/wow.js"></script> 
-    <script src="../static/js/jquery.vide.js"></script>
-    <script src="../static/js/jquery.counterup.min.js"></script>    
-    <script src="../static/js/jquery.magnific-popup.min.js"></script>    
-    <script src="../static/js/waypoints.min.js"></script>    
-    <script src="../static/js/form-validator.min.js"></script>
-    <script src="../static/js/contact-form-script.js"></script>   
-    <script src="../static/js/main.js"></script>
+    <script src="/js/jquery-min.js"></script>
+    <script src="/js/popper.min.js"></script>
+    <script src="/js/bootstrap.min.js"></script>
+    <script src="/js/classie.js"></script>
+    <script src="/js/color-switcher.js"></script>
+    <script src="/js/jquery.mixitup.js"></script>
+    <script src="/js/nivo-lightbox.js"></script>
+    <script src="/js/owl.carousel.js"></script>    
+    <script src="/js/jquery.stellar.min.js"></script>    
+    <script src="/js/jquery.nav.js"></script>    
+    <script src="/js/scrolling-nav.js"></script>    
+    <script src="/js/jquery.easing.min.js"></script>     
+    <script src="/js/wow.js"></script> 
+    <script src="/js/jquery.vide.js"></script>
+    <script src="/js/jquery.counterup.min.js"></script>    
+    <script src="/js/jquery.magnific-popup.min.js"></script>    
+    <script src="/js/waypoints.min.js"></script>    
+    <script src="/js/form-validator.min.js"></script>
+    <script src="/js/contact-form-script.js"></script>   
+    <script src="/js/main.js"></script>
     
   </body>
 </html>
