--- a/project/src/main/resources/templates/user-info.html
+++ b/project/src/main/resources/templates/user-info.html
@@ -9,7 +9,7 @@
     <title>Dashboard Template · Bootstrap</title>
 
     <!-- Bootstrap core CSS -->
-<link href="../static/css/bootstrap.min.css" rel="stylesheet">
+<link href="/css/bootstrap.min.css" rel="stylesheet">
 
 
     <style>
@@ -29,7 +29,7 @@
       }
     </style>
     <!-- Custom styles for this template -->
-    <link href="../static/css/dashboard.css" rel="stylesheet">
+    <link href="/css/dashboard.css" rel="stylesheet">
   </head>
   <body>
     <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
@@ -268,9 +268,9 @@
     </main>
   </div>
 </div>
-<script src="../static/js/jquery-3.3.1.slim.min.js"></script>
-      <script>window.jQuery || document.write('<script src="../static/js/jquery-slim.min.js"><\/script>')</script><script src="../static/js/bootstrap.bundle.js"></script>
-        <script src="../static/js/feather.min.js"></script>
-        <script src="../static/js/Chart.min.js"></script>
-        <script src="../static/js/user-info.js"></script></body>
+<script src="/js/jquery-3.3.1.slim.min.js"></script>
+      <script>window.jQuery || document.write('<script src="/js/jquery-slim.min.js"><\/script>')</script><script src="/js/bootstrap.bundle.js"></script>
+        <script src="/js/feather.min.js"></script>
+        <script src="/js/Chart.min.js"></script>
+        <script src="/js/user-info.js"></script></body>
 </html>
